2012-01-12  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added options to add
	network, plugin and snmp modules to policy from 
	CLI

2012-01-11  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added icon to the create
	group option

2012-01-11  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed a little bug in 
	the configuration_data field when create a data
	module in a policy

2012-01-11  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Little fixes over the last
	changes

2012-01-11  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added options
	--create_policy_data_module and --create_alert_template 
	to CLI and merged changes from Kosaka works into 4.0 branch
	adding str_warning and str_critical parameters to all
	modules creation options

2012-01-05  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added --get_module_data in 
	CSV format option to CLI

2012-01-05  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	util/pandora_manage.pl: Added two new options to 
	CLI --update_user and --add_profile_to_user

2012-01-04  Sergio Martin <sergio.martin@artica.es>

	*  lib/PandoraFMS/DB.pm
	util/pandora_manage.pl: Added --enable_user and
	--disable_user options to CLI

2011-12-29  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	util/pandora_manage.pl: Added two new options to CLI:
	Create group and add agent to policy

2011-12-26  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Discard inc data when a second value
	  with the same timestamp arrives. Thanks to eXXon.

2011-12-23  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Added Netflow server configuration
	  tokens.

	* lib/PandoraFMS/Core.pm: Added the netflow server type.

2011-12-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Added netflow server configuration
	  tokens.
