@@ -1,3 +1,8 @@
+2012-01-13  Sergio Martin <sergio.martin@artica.es>
+
+	* util/pandora_manage.pl: Added update_alert_template
+	option
+
 2012-01-12  Sergio Martin <sergio.martin@artica.es>
 
 	* util/pandora_manage.pl: Added options to add
